objects/Budget__c/Budget__c.object-meta.xml
<CustomObject>
    <label>Budget</label>
    <nameField>
        <displayFormat>TB-{00000}</displayFormat>
        <label>Budget #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>