objects/Budget__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
            <value>
                <fullName>Pipeline Acceleration</fullName>
            </value>
            <value>
                <fullName>Press &amp; Influence</fullName>
            </value>
            <value>
                <fullName>Product Marketing</fullName>
            </value>
            <value>
                <fullName>Content Development</fullName>
            </value>
            <value>
                <fullName>Staff Development &amp; Offsites</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>