objects/Budget__c/fields/Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Status__c</fullName>
    <label>Agreement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>Request Approval</fullName>
            </value>
            <value>
                <fullName>Submitted Request</fullName>
            </value>
            <value>
                <fullName>Approved Request</fullName>
            </value>
            <value>
                <fullName>Cancelled Request</fullName>
            </value>
            <value>
                <fullName>In Amendment</fullName>
            </value>
            <value>
                <fullName>Author Contract</fullName>
            </value>
            <value>
                <fullName>Language Approval</fullName>
            </value>
            <value>
                <fullName>Language Approved</fullName>
            </value>
            <value>
                <fullName>Internal Signatures</fullName>
            </value>
            <value>
                <fullName>Other Party Signatures</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Being Amended</fullName>
            </value>
            <value>
                <fullName>Being Renewed</fullName>
            </value>
            <value>
                <fullName>In Renewal</fullName>
            </value>
            <value>
                <fullName>Superseded</fullName>
            </value>
            <value>
                <fullName>Being Terminated</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>In Reconciliation</fullName>
            </value>
            <value>
                <fullName>Reconciled</fullName>
            </value>
            <value>
                <fullName>Internal Review</fullName>
            </value>
            <value>
                <fullName>Other Party Review</fullName>
            </value>
            <value>
                <fullName>Signature Declined</fullName>
            </value>
            <value>
                <fullName>Ready for Signatures</fullName>
            </value>
            <value>
                <fullName>Fully Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>