objects/Budget__c/fields/Application_Owner__c.field-meta.xml
<CustomField>
    <fullName>Application_Owner__c</fullName>
    <inlineHelpText>Who would be the application owner? *</inlineHelpText>
    <label>Application Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>