objects/Budget__c/fields/Approval_Matrix_Link__c.field-meta.xml
<CustomField>
    <fullName>Approval_Matrix_Link__c</fullName>
    <defaultValue>&quot;https://tanium.my.salesforce.com/00O0e000004vBWl&quot;</defaultValue>
    <label>Approval Matrix Link</label>
    <type>Url</type>
</CustomField>