objects/Budget__c/fields/Approximate_Amount_In_USD__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Amount_In_USD__c</fullName>
    <inlineHelpText>Fill the approximate value of Purchase Request Amount in USD if Currency is not USD</inlineHelpText>
    <label>Approximate Amount In USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>