objects/Budget__c/fields/Attachment_Summary__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Summary__c</fullName>
    <description>TAN-726 Added by Cumulus Vision</description>
    <label>Attachment Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>