objects/Budget__c/fields/Attachment_Summary_Rich__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Summary_Rich__c</fullName>
    <description>TAN-728</description>
    <label>Attachment Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>