objects/Budget__c/fields/Budget_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Budget_Approval_Date__c</fullName>
    <description>This field is used to track Budget approval Date</description>
    <inlineHelpText>This field is used to track Budget approval Date and is populated via workflow rule</inlineHelpText>
    <label>Budget Approval Date</label>
    <type>DateTime</type>
</CustomField>