objects/Budget__c/fields/Budget_Description__c.field-meta.xml
<CustomField>
    <fullName>Budget_Description__c</fullName>
    <label>Budget Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>