objects/Budget__c/fields/Budget_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Budget_Level_2__c</fullName>
    <label>Budget Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>US West</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Global Sales</fullName>
            </value>
            <value>
                <fullName>Channel / Alliances</fullName>
            </value>
            <value>
                <fullName>South Asia</fullName>
            </value>
            <value>
                <fullName>EMEA-R</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>US and Canada</fullName>
            </value>
            <value>
                <fullName>Global Financial Services</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>US East</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>