objects/Budget__c/fields/Budget_Level_4__c.field-meta.xml
<CustomField>
    <fullName>Budget_Level_4__c</fullName>
    <label>Budget Level 4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alliances</fullName>
            </value>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Central: GHE</fullName>
            </value>
            <value>
                <fullName>Central Europe</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Channel / Alliances</fullName>
            </value>
            <value>
                <fullName>East: GHE</fullName>
            </value>
            <value>
                <fullName>East: GHE Region</fullName>
            </value>
            <value>
                <fullName>East: Inside Sales</fullName>
            </value>
            <value>
                <fullName>East: Mid-Atlantic</fullName>
            </value>
            <value>
                <fullName>East: New England</fullName>
            </value>
            <value>
                <fullName>East: Northeast Region</fullName>
            </value>
            <value>
                <fullName>East: NY</fullName>
            </value>
            <value>
                <fullName>East: Ohio Valley</fullName>
            </value>
            <value>
                <fullName>East: Southeast</fullName>
            </value>
            <value>
                <fullName>East: Southeast Region</fullName>
            </value>
            <value>
                <fullName>EMEA FSI</fullName>
            </value>
            <value>
                <fullName>EMEA Global Financial</fullName>
            </value>
            <value>
                <fullName>EMEA-R</fullName>
            </value>
            <value>
                <fullName>Europe North</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Federal: Civilian</fullName>
            </value>
            <value>
                <fullName>Federal: DoD</fullName>
            </value>
            <value>
                <fullName>Global FSI</fullName>
            </value>
            <value>
                <fullName>Global Sales</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>South Asia</fullName>
            </value>
            <value>
                <fullName>US_and_Canada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>