objects/Budget__c/fields/Budget_Owner__c.field-meta.xml
<CustomField>
    <fullName>Budget_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This will auto populate based on Department &amp; Region combination</inlineHelpText>
    <label>Budget Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Budget</relationshipName>
    <type>Lookup</type>
</CustomField>