objects/Budget__c/fields/Budget_Owner_Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Budget_Owner_Approval_Notes__c</fullName>
    <label>Budget Owner Approval Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>