objects/Budget__c/fields/Budget_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Budget_Submitted_Date__c</fullName>
    <description>This field is used to track the submitted date for the budget</description>
    <inlineHelpText>This field is used to track the submitted date for the budget, and is populated via Workflow rule</inlineHelpText>
    <label>Budget Submitted Date</label>
    <type>DateTime</type>
</CustomField>