objects/Budget__c/fields/Business_Department__c.field-meta.xml
<CustomField>
    <fullName>Business_Department__c</fullName>
    <inlineHelpText>Department you are requesting for</inlineHelpText>
    <label>Business Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chronicle</fullName>
            </value>
            <value>
                <fullName>Cost of Sales</fullName>
            </value>
            <value>
                <fullName>Cost of Sales: Chronicle</fullName>
            </value>
            <value>
                <fullName>Cost of Sales : Chronicle</fullName>
            </value>
            <value>
                <fullName>Cost of Sales: Hardware</fullName>
            </value>
            <value>
                <fullName>Cost of Sales: Software</fullName>
            </value>
            <value>
                <fullName>Cost of Sales: TaaS</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>G&amp;A: Accounting</fullName>
            </value>
            <value>
                <fullName>G&amp;A: Allocate</fullName>
            </value>
            <value>
                <fullName>G&amp;A: Executives/Other</fullName>
            </value>
            <value>
                <fullName>G&amp;A: Facilities</fullName>
            </value>
            <value>
                <fullName>G&amp;A: Finance</fullName>
            </value>
            <value>
                <fullName>G&amp;A: Global Enablement</fullName>
            </value>
            <value>
                <fullName>G&amp;A: Human Resources</fullName>
            </value>
            <value>
                <fullName>G&amp;A: IT Security</fullName>
            </value>
            <value>
                <fullName>G&amp;A: IT Support</fullName>
            </value>
            <value>
                <fullName>G&amp;A: Legal</fullName>
            </value>
            <value>
                <fullName>G&amp;A: Office of the CEO</fullName>
            </value>
            <value>
                <fullName>G&amp;A: Physical Security</fullName>
            </value>
            <value>
                <fullName>G&amp;A: Strategy &amp; Analytics</fullName>
            </value>
            <value>
                <fullName>G&amp;A: Talent Acquisition</fullName>
            </value>
            <value>
                <fullName>G&amp;A: Tax &amp; Payroll</fullName>
            </value>
            <value>
                <fullName>Marketing: Brand &amp; Communication</fullName>
            </value>
            <value>
                <fullName>Marketing: Demand Generation</fullName>
            </value>
            <value>
                <fullName>Marketing: Events Marketing</fullName>
            </value>
            <value>
                <fullName>Marketing: Field Marketing</fullName>
            </value>
            <value>
                <fullName>Marketing: Field Marketing_Fed</fullName>
            </value>
            <value>
                <fullName>Marketing: Marketing Leadership</fullName>
            </value>
            <value>
                <fullName>Marketing: Product Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>