objects/Budget__c/fields/CAO_Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>CAO_Approval_Notes__c</fullName>
    <label>CAO Approval Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>