objects/Budget__c/fields/CEO_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>CEO_Approved_Date__c</fullName>
    <label>CEO Approved Date</label>
    <type>Date</type>
</CustomField>