objects/Budget__c/fields/CFO_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>CFO_Approved_Date__c</fullName>
    <label>CFO Approved Date</label>
    <type>Date</type>
</CustomField>