objects/Budget__c/fields/CFO_Reject_Date__c.field-meta.xml
<CustomField>
    <fullName>CFO_Reject_Date__c</fullName>
    <label>CFO Reject Date</label>
    <type>Date</type>
</CustomField>