objects/Budget__c/fields/Competitive_Bid_Needed__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Bid_Needed__c</fullName>
    <description>Procurement FY19 update. Triggers Procurement approval step</description>
    <label>Competitive Bid Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>