objects/Budget__c/fields/Competitive_Product_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Product_Evaluation__c</fullName>
    <inlineHelpText>Are you evaluating any competitive products? If so, which ones?</inlineHelpText>
    <label>Competitive Product Evaluation</label>
    <type>TextArea</type>
</CustomField>