objects/Budget__c/fields/Computer_Software_Hardware_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Computer_Software_Hardware_Rollup__c</fullName>
    <label>Computer Software Hardware Rollup</label>
    <summaryFilterItems>
        <field>Budget_Line_Item__c.Purchase_Item_Type__c</field>
        <operation>equals</operation>
        <value>Computer Hardware/Software Maintenance</value>
    </summaryFilterItems>
    <summaryForeignKey>Budget_Line_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>