objects/Budget__c/fields/Cost_Per_Account__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Account__c</fullName>
    <description>Field Marketing Users need enter a value into this field</description>
    <label>Cost Per Account</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>