objects/Budget__c/fields/Credit_Card_Payment__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Credit Card Payment</description>
    <inlineHelpText>Credit Card Payment</inlineHelpText>
    <label>Credit Card Payment</label>
    <type>Checkbox</type>
</CustomField>