objects/Budget__c/fields/Credit_Card_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Payment_Date__c</fullName>
    <description>Credit Card Payment Date</description>
    <inlineHelpText>Credit Card Payment Date</inlineHelpText>
    <label>Credit Card Payment Date</label>
    <type>Date</type>
</CustomField>