objects/Budget__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>