objects/Budget__c/fields/Data_Access__c.field-meta.xml
<CustomField>
    <fullName>Data_Access__c</fullName>
    <inlineHelpText>What data will Tanium or the third-party access, transfer, store or process? (Check all that apply) *</inlineHelpText>
    <label>Data Access</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proprietary Tanium data (e.g. Platform/product source code, product strategy, vulnerabilities and support documentation)</fullName>
                <label>Proprietary Tanium data</label>
            </value>
            <value>
                <fullName>Personal Information (e.g. Name and personal contact information, DOB, insurance numbers, education, financial information)</fullName>
                <label>Personal Information</label>
            </value>
            <value>
                <fullName>Sales/Deal Information (e.g. Customer/prospect name, contract details, contract information)</fullName>
                <label>Sales/Deal Information</label>
            </value>
            <value>
                <fullName>Job related information (e.g. Job title/status/work details, terms of employment, benefits, performance evaluations)</fullName>
                <label>Job related information</label>
            </value>
            <value>
                <fullName>Employee use of computers and facilities (e.g. IP addresses, logs generated by use, user authentication information, company badge information)</fullName>
                <label>Employee use of computers and facilities</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>