objects/Budget__c/fields/Data_Corruption_Sev_Exp__c.field-meta.xml
<CustomField>
    <fullName>Data_Corruption_Sev_Exp__c</fullName>
    <formula>&quot;High(Severe or catastrophic financial, reputational, competitive or regulatory adverse consequences)&quot; &amp; BR() &amp; BR()&amp; &quot;Medium (Serious financial, reputational, competitive or regulatory adverse consequences)&quot;&amp; BR() &amp; BR()&amp; &quot;Low (Limited financial, reputational, competitive or regulatory adverse consequences)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Explainer</label>
    <type>Text</type>
</CustomField>