objects/Budget__c/fields/Data_Description__c.field-meta.xml
<CustomField>
    <fullName>Data_Description__c</fullName>
    <inlineHelpText>Please describe all types of data</inlineHelpText>
    <label>Data Description</label>
    <type>TextArea</type>
</CustomField>