objects/Budget__c/fields/Data_Disclosure_Severity__c.field-meta.xml
<CustomField>
    <fullName>Data_Disclosure_Severity__c</fullName>
    <inlineHelpText>How severe would the impact be if the third-party were to disclose our data to unauthorized individuals? *Please list Severity Level AND What would be the worst thing that could happen? (ie. Low. Worst thing disclosed would be email addresses)</inlineHelpText>
    <label>Data Disclosure Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High (Severe or catastrophic financial, reputational, competitive or regulatory adverse consequences)</fullName>
                <label>High</label>
            </value>
            <value>
                <fullName>Medium (Serious financial, reputational, competitive or regulatory adverse consequences)</fullName>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low (Limited financial, reputational, competitive or regulatory adverse consequences)</fullName>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>