objects/Budget__c/fields/Documentation_Attached_Here__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Attached_Here__c</fullName>
    <label>Documentation Attached Here</label>
    <length>255</length>
    <type>Text</type>
</CustomField>