objects/Budget__c/fields/Documentation_Pre_Negotiated__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Pre_Negotiated__c</fullName>
    <label>Documentation Pre-Negotiated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>