objects/Budget__c/fields/Documentation_Required_For_This_Spend__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Required_For_This_Spend__c</fullName>
    <label>Documentation Required For This Spend</label>
    <length>255</length>
    <type>Text</type>
</CustomField>