objects/Budget__c/fields/Documentation_Requirement_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Requirement_Rollup__c</fullName>
    <label>Documentation Requirement Rollup</label>
    <summaryFilterItems>
        <field>Budget_Line_Item__c.Purchase_Item_Type__c</field>
        <operation>contains</operation>
        <value>&quot;Computer Hardware &gt;$2,500 - Fixed Assets&quot;, &quot;Computer Software &gt;$2,500 - Fixed Assets&quot;, Consulting, Communication - Internet, Communication - telephones, Computer Hardware/Software Maintenance, Construction in Progress (Leasehold Improvements), Events, Ma</value>
    </summaryFilterItems>
    <summaryForeignKey>Budget_Line_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>