objects/Budget__c/fields/Documentation_Requirements_Grid__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Requirements_Grid__c</fullName>
    <defaultValue>&quot;https://docs.google.com/spreadsheets/d/18Qw1nk672WMqV3VJDURk6N9uJ0koFXdFlu4sjnscB5E/edit#gid=0&quot;</defaultValue>
    <label>Documentation Requirements Grid</label>
    <type>Url</type>
</CustomField>