objects/Budget__c/fields/Documents_Required__c.field-meta.xml
<CustomField>
    <fullName>Documents_Required__c</fullName>
    <formula>IF( MSA_Required_Rollup__c&gt;0, &quot;MSA or PO T &amp; C,   &quot;, &quot;&quot;) &amp; 
IF(Order_Form_Required_Roll__c &gt;0, &quot;Order Form,   &quot;, &quot;&quot;) &amp; 
IF(  Ext_Sec_Rev_Rollup__c &gt;0 , &quot;EXT Security Review,   &quot;, &quot;&quot;) &amp; 
IF(  ROI_Required_Rollup__c &gt;0, &quot;ROI,   &quot;, &quot;&quot;) &amp; 
IF(  SOW_Required_Rollup__c &gt;0 , &quot;SOW &quot;, &quot;&quot;)</formula>
    <inlineHelpText>If you have any of the following documentation, please attach or add description to the &quot;Notes&quot; field</inlineHelpText>
    <label>Required Documentation To Purchase</label>
    <type>Text</type>
</CustomField>