objects/Budget__c/fields/E_Staff_Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>E_Staff_Approval_Notes__c</fullName>
    <label>E Staff Approval Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>