objects/Budget__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Contact term end date or event or subscription period end date</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>